changes on article view&timeline

--- a/html&css/article view/style.css
+++ b/html&css/article view/style.css
@@ -1,11 +1,11 @@
 body{
   height: 200px;
-  border: gray solid
+  border: gray solid;
+  display:flex;
   
 }
 img{
     margin:5px;
-	float: left;
 	height: 95%;
 	margin-right: 10px;
 }
