upadate for exam3

--- a/js/exam1/exam3/progress bar/style.css
+++ b/js/exam1/exam3/progress bar/style.css
@@ -1,9 +1,9 @@
-#progress{
+.progress{
 	width: 100%;
 	background-color: lightgrey;
 
 }
-#bar{
+.bar{
 	width: 0.1%;
 	height: 20px;
 	/*background-color: green*/
