--- a/react/my-app/src/containers/header/style.styl
+++ b/react/my-app/src/containers/header/style.styl
@@ -9,19 +9,24 @@
   .appbar
     background-color: #A52A2A !important
     & .toolbar
-        background-color: inherit;
+        background-color: inherit
     & .home-icon
         margin-right: 8px
 
   .grow
     flex-grow: 1
 
-
-
   .rightMenuButton
      button
        padding: 0px
        color: #fff
+
+  .drawerHeader
+    display: 'flex'
+    alignItems: 'center'
+    padding: '0 8px'
+    justifyContent: 'flex-end'
+  
   .left_border
     color: white
     padding: 5px
