--- a/react/my-app/src/index.css
+++ b/react/my-app/src/index.css
@@ -136,6 +136,15 @@ iframe {
 #root.no-margin-left {
   margin-left: 0;
 }
+.footer {
+  border-top: 1px solid #e6ecf2;
+  text-align: left;
+  margin-left: 260px;
+}
+.footer-text {
+  font-size: 20px;
+  color: #7d98b3;
+}
 .root {
   display: flex;
   flex-grow: 1;
