--- a/react/my-app/src/containers/header/index.styl
+++ b/react/my-app/src/containers/header/index.styl
@@ -1,36 +1,25 @@
-.root
-    display:flex
+ .root
     flex-grow: 1
     margin-bottom: 0px
     header
       padding-right: 0px
-    color:white
 
   .appbar
-    background-color: #A52A2A !important
     & .toolbar
-        background-color: inherit
+        background-color: inherit;
     & .home-icon
         margin-right: 8px
 
   .grow
     flex-grow: 1
 
-  .rightMenuButton
+  .titleColor
+    color: white
+
+   .rightMenuButton
      button
        padding: 0px
        color: #fff
-
-  .drawerHeader
-    display: 'flex'
-    alignItems: 'center'
-    padding: '0 8px'
-    justifyContent: 'flex-end'
-  
-  .left_border
-    color: white
-    padding: 5px
-    border-left:solid black 2px
 
   .rightMenu
     ul
