--- a/react/my-app/src/containers/index.styl
+++ b/react/my-app/src/containers/index.styl
@@ -1,8 +1,3 @@
-.move-right
-   padding-left: 260px
-   width: 100vw
-   justify-content: center
-
 .default
    padding-left: 20px
    width: 100vw
@@ -10,11 +5,11 @@
 
 .content
   min-height: calc(100vh - 30px)
-  padding-top: 50px
-  margin-right: 20px
-  padding-right: 18px
+  padding-top: 20px
+  margin-right: 1vw
+
+  width: 98vw
 
 .footer-position
    margin-top: 30px
- 	 position: relative
- 	 bottom: 0
+ 	bottom: 0
