--- a/react/my-app/src/stylus/index.styl
+++ b/react/my-app/src/stylus/index.styl
@@ -3,4 +3,5 @@
 @require "global/variables.styl"
 @require "global/layout.styl"
 @require "../containers/**/*.styl"
+@require "../components/**/*.styl"
 
